fixed Swing text MAQRO activity submit button placement on fragment views fixed null parent problem on Swing text fragment views created automatic styling for Swing text MAQRO views fixed Swing text multi-level CSS selector style application